--- a/src/scss/grommet-core/_objects.article.scss
+++ b/src/scss/grommet-core/_objects.article.scss
@@ -11,7 +11,7 @@
 
     > .article__control {
       position: fixed;
-      z-index: 10;
+      z-index: 9;
 
       &-up {
         top: 0;
